# devicebase-ai

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  README.md  example.py  main.py  pyproject.toml
devicebase_ai/: __init__.py  agent.py  base.py  prompt.py
docs/: SCREENSHOT_CONTEXT.md  SCREENSHOT_FEATURE_SUMMARY.md
examples/: config_examples.py  screenshot_example.py
tests/: test_example.py
tests/agents/: test_agent.py  test_base.py
