[project]
name = "devicebase-ai"
version = "2026.4.21"
description = "AI agent framework built on top of devicebase"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "devicebase", email = "" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "devicebase>=2026.4.21",
    "python-dotenv>=1.0",
    "Pillow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.8",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devicebase_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:", "pragma: no cover"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
